y.output
Terminals unused in grammar

   AND
   OR
   '!'
   '['
   ']'
   FOR


Grammar

    0 $accept: program $end

    1 program: stat program
    2        | END_OF_FILE
    3        | %empty

    4 stat: declaration
    5     | assign_stat
    6     | expression_stat ';'
    7     | func_stat
    8     | return_stat
    9     | compound_stat

   10 declaration: type ID '=' initializer ';'
   11            | type ID ';'
   12            | type ID '(' declare_function_param ')' ';'
   13            | type ID '(' declare_function_param ')' block

   14 declare_function_param: declare_function_param ',' type ID
   15                       | type ID
   16                       | %empty

   17 block: '{' program '}'

   18 assign_stat: ID '=' initializer ';'
   19            | ID ADDASGN initializer ';'
   20            | ID SUBASGN initializer ';'
   21            | ID MULASGN initializer ';'
   22            | ID DIVASGN initializer ';'
   23            | ID MODASGN initializer ';'

   24 initializer: expression_stat

   25 term: I_CONST
   26     | '-' I_CONST
   27     | F_CONST
   28     | '-' F_CONST
   29     | STR_CONST
   30     | ID
   31     | TRUE
   32     | FALSE

   33 expression_stat: expression2 '+' expression_stat
   34                | expression2 '-' expression_stat
   35                | expression2

   36 expression2: expression3 '*' expression2
   37            | expression3 '/' expression2
   38            | expression3 '%' expression2
   39            | expression3

   40 expression3: INC expression4
   41            | DEC expression4
   42            | expression4

   43 expression4: expression5 INC
   44            | expression5 DEC
   45            | expression5

   46 expression5: term
   47            | '(' expression_stat ')'

   48 func_stat: ID '(' func_param ')' ';'
   49          | ID '(' error ')'

   50 func_param: func_param ',' term
   51           | term
   52           | %empty

   53 compound_stat: IF '(' bool_stat ')' block else_stat
   54              | WHILE '(' bool_stat ')' block
   55              | print_func

   56 else_stat: ELSE else_stat_postfix
   57          | %empty

   58 else_stat_postfix: IF '(' bool_stat ')' block else_stat
   59                  | block

   60 bool_stat: expression_stat '>' expression_stat
   61          | expression_stat '<' expression_stat
   62          | expression_stat MTE expression_stat
   63          | expression_stat LTE expression_stat
   64          | expression_stat EQ expression_stat
   65          | expression_stat NE expression_stat
   66          | TRUE
   67          | FALSE

   68 print_func: PRINT '(' print_param ')' ';'

   69 print_param: ID
   70            | STR_CONST

   71 return_stat: RET term ';'

   72 type: INT
   73     | FLOAT
   74     | BOOL
   75     | STRING
   76     | VOID


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 38
'(' (40) 12 13 47 48 49 53 54 58 68
')' (41) 12 13 47 48 49 53 54 58 68
'*' (42) 36
'+' (43) 33
',' (44) 14 50
'-' (45) 26 28 34
'/' (47) 37
';' (59) 6 10 11 12 18 19 20 21 22 23 48 68 71
'<' (60) 61
'=' (61) 10 18
'>' (62) 60
'[' (91)
']' (93)
'{' (123) 17
'}' (125) 17
error (256) 49
MTE (258) 62
LTE (259) 63
EQ (260) 64
NE (261) 65
AND (262)
OR (263)
INC (264) 40 43
DEC (265) 41 44
ADDASGN (266) 19
SUBASGN (267) 20
MULASGN (268) 21
DIVASGN (269) 22
MODASGN (270) 23
PRINT (271) 68
IF (272) 53 58
ELSE (273) 56
FOR (274)
WHILE (275) 54
RET (276) 71
INT (277) 72
FLOAT (278) 73
BOOL (279) 74
STRING (280) 75
VOID (281) 76
I_CONST (282) 25 26
F_CONST (283) 27 28
STR_CONST (284) 29 70
TRUE (285) 31 66
FALSE (286) 32 67
ID (287) 10 11 12 13 14 15 18 19 20 21 22 23 30 48 49 69
END_OF_FILE (288) 2


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2 3, on right: 0 1 17
stat (53)
    on left: 4 5 6 7 8 9, on right: 1
declaration (54)
    on left: 10 11 12 13, on right: 4
declare_function_param (55)
    on left: 14 15 16, on right: 12 13 14
block (56)
    on left: 17, on right: 13 53 54 58 59
assign_stat (57)
    on left: 18 19 20 21 22 23, on right: 5
initializer (58)
    on left: 24, on right: 10 18 19 20 21 22 23
term (59)
    on left: 25 26 27 28 29 30 31 32, on right: 46 50 51 71
expression_stat (60)
    on left: 33 34 35, on right: 6 24 33 34 47 60 61 62 63 64 65
expression2 (61)
    on left: 36 37 38 39, on right: 33 34 35 36 37 38
expression3 (62)
    on left: 40 41 42, on right: 36 37 38 39
expression4 (63)
    on left: 43 44 45, on right: 40 41 42
expression5 (64)
    on left: 46 47, on right: 43 44 45
func_stat (65)
    on left: 48 49, on right: 7
func_param (66)
    on left: 50 51 52, on right: 48 50
compound_stat (67)
    on left: 53 54 55, on right: 9
else_stat (68)
    on left: 56 57, on right: 53 58
else_stat_postfix (69)
    on left: 58 59, on right: 56
bool_stat (70)
    on left: 60 61 62 63 64 65 66 67, on right: 53 54 58
print_func (71)
    on left: 68, on right: 55
print_param (72)
    on left: 69 70, on right: 68
return_stat (73)
    on left: 71, on right: 8
type (74)
    on left: 72 73 74 75 76, on right: 10 11 12 13 14 15


State 0

    0 $accept: . program $end

    '-'          shift, and go to state 1
    INC          shift, and go to state 2
    DEC          shift, and go to state 3
    '('          shift, and go to state 4
    PRINT        shift, and go to state 5
    IF           shift, and go to state 6
    WHILE        shift, and go to state 7
    RET          shift, and go to state 8
    INT          shift, and go to state 9
    FLOAT        shift, and go to state 10
    BOOL         shift, and go to state 11
    STRING       shift, and go to state 12
    VOID         shift, and go to state 13
    I_CONST      shift, and go to state 14
    F_CONST      shift, and go to state 15
    STR_CONST    shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    ID           shift, and go to state 19
    END_OF_FILE  shift, and go to state 20

    $default  reduce using rule 3 (program)

    program          go to state 21
    stat             go to state 22
    declaration      go to state 23
    assign_stat      go to state 24
    term             go to state 25
    expression_stat  go to state 26
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30
    func_stat        go to state 31
    compound_stat    go to state 32
    print_func       go to state 33
    return_stat      go to state 34
    type             go to state 35


State 1

   26 term: '-' . I_CONST
   28     | '-' . F_CONST

    I_CONST  shift, and go to state 36
    F_CONST  shift, and go to state 37


State 2

   40 expression3: INC . expression4

    '-'        shift, and go to state 1
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    term         go to state 25
    expression4  go to state 39
    expression5  go to state 30


State 3

   41 expression3: DEC . expression4

    '-'        shift, and go to state 1
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    term         go to state 25
    expression4  go to state 40
    expression5  go to state 30


State 4

   47 expression5: '(' . expression_stat ')'

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    term             go to state 25
    expression_stat  go to state 41
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30


State 5

   68 print_func: PRINT . '(' print_param ')' ';'

    '('  shift, and go to state 42


State 6

   53 compound_stat: IF . '(' bool_stat ')' block else_stat

    '('  shift, and go to state 43


State 7

   54 compound_stat: WHILE . '(' bool_stat ')' block

    '('  shift, and go to state 44


State 8

   71 return_stat: RET . term ';'

    '-'        shift, and go to state 1
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    term  go to state 45


State 9

   72 type: INT .

    $default  reduce using rule 72 (type)


State 10

   73 type: FLOAT .

    $default  reduce using rule 73 (type)


State 11

   74 type: BOOL .

    $default  reduce using rule 74 (type)


State 12

   75 type: STRING .

    $default  reduce using rule 75 (type)


State 13

   76 type: VOID .

    $default  reduce using rule 76 (type)


State 14

   25 term: I_CONST .

    $default  reduce using rule 25 (term)


State 15

   27 term: F_CONST .

    $default  reduce using rule 27 (term)


State 16

   29 term: STR_CONST .

    $default  reduce using rule 29 (term)


State 17

   31 term: TRUE .

    $default  reduce using rule 31 (term)


State 18

   32 term: FALSE .

    $default  reduce using rule 32 (term)


State 19

   18 assign_stat: ID . '=' initializer ';'
   19            | ID . ADDASGN initializer ';'
   20            | ID . SUBASGN initializer ';'
   21            | ID . MULASGN initializer ';'
   22            | ID . DIVASGN initializer ';'
   23            | ID . MODASGN initializer ';'
   30 term: ID .
   48 func_stat: ID . '(' func_param ')' ';'
   49          | ID . '(' error ')'

    '='      shift, and go to state 46
    ADDASGN  shift, and go to state 47
    SUBASGN  shift, and go to state 48
    MULASGN  shift, and go to state 49
    DIVASGN  shift, and go to state 50
    MODASGN  shift, and go to state 51
    '('      shift, and go to state 52

    $default  reduce using rule 30 (term)


State 20

    2 program: END_OF_FILE .

    $default  reduce using rule 2 (program)


State 21

    0 $accept: program . $end

    $end  shift, and go to state 53


State 22

    1 program: stat . program

    '-'          shift, and go to state 1
    INC          shift, and go to state 2
    DEC          shift, and go to state 3
    '('          shift, and go to state 4
    PRINT        shift, and go to state 5
    IF           shift, and go to state 6
    WHILE        shift, and go to state 7
    RET          shift, and go to state 8
    INT          shift, and go to state 9
    FLOAT        shift, and go to state 10
    BOOL         shift, and go to state 11
    STRING       shift, and go to state 12
    VOID         shift, and go to state 13
    I_CONST      shift, and go to state 14
    F_CONST      shift, and go to state 15
    STR_CONST    shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    ID           shift, and go to state 19
    END_OF_FILE  shift, and go to state 20

    $default  reduce using rule 3 (program)

    program          go to state 54
    stat             go to state 22
    declaration      go to state 23
    assign_stat      go to state 24
    term             go to state 25
    expression_stat  go to state 26
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30
    func_stat        go to state 31
    compound_stat    go to state 32
    print_func       go to state 33
    return_stat      go to state 34
    type             go to state 35


State 23

    4 stat: declaration .

    $default  reduce using rule 4 (stat)


State 24

    5 stat: assign_stat .

    $default  reduce using rule 5 (stat)


State 25

   46 expression5: term .

    $default  reduce using rule 46 (expression5)


State 26

    6 stat: expression_stat . ';'

    ';'  shift, and go to state 55


State 27

   33 expression_stat: expression2 . '+' expression_stat
   34                | expression2 . '-' expression_stat
   35                | expression2 .

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 35 (expression_stat)


State 28

   36 expression2: expression3 . '*' expression2
   37            | expression3 . '/' expression2
   38            | expression3 . '%' expression2
   39            | expression3 .

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 39 (expression2)


State 29

   42 expression3: expression4 .

    $default  reduce using rule 42 (expression3)


State 30

   43 expression4: expression5 . INC
   44            | expression5 . DEC
   45            | expression5 .

    INC  shift, and go to state 61
    DEC  shift, and go to state 62

    $default  reduce using rule 45 (expression4)


State 31

    7 stat: func_stat .

    $default  reduce using rule 7 (stat)


State 32

    9 stat: compound_stat .

    $default  reduce using rule 9 (stat)


State 33

   55 compound_stat: print_func .

    $default  reduce using rule 55 (compound_stat)


State 34

    8 stat: return_stat .

    $default  reduce using rule 8 (stat)


State 35

   10 declaration: type . ID '=' initializer ';'
   11            | type . ID ';'
   12            | type . ID '(' declare_function_param ')' ';'
   13            | type . ID '(' declare_function_param ')' block

    ID  shift, and go to state 63


State 36

   26 term: '-' I_CONST .

    $default  reduce using rule 26 (term)


State 37

   28 term: '-' F_CONST .

    $default  reduce using rule 28 (term)


State 38

   30 term: ID .

    $default  reduce using rule 30 (term)


State 39

   40 expression3: INC expression4 .

    $default  reduce using rule 40 (expression3)


State 40

   41 expression3: DEC expression4 .

    $default  reduce using rule 41 (expression3)


State 41

   47 expression5: '(' expression_stat . ')'

    ')'  shift, and go to state 64


State 42

   68 print_func: PRINT '(' . print_param ')' ';'

    STR_CONST  shift, and go to state 65
    ID         shift, and go to state 66

    print_param  go to state 67


State 43

   53 compound_stat: IF '(' . bool_stat ')' block else_stat

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 68
    FALSE      shift, and go to state 69
    ID         shift, and go to state 38

    term             go to state 25
    expression_stat  go to state 70
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30
    bool_stat        go to state 71


State 44

   54 compound_stat: WHILE '(' . bool_stat ')' block

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 68
    FALSE      shift, and go to state 69
    ID         shift, and go to state 38

    term             go to state 25
    expression_stat  go to state 70
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30
    bool_stat        go to state 72


State 45

   71 return_stat: RET term . ';'

    ';'  shift, and go to state 73


State 46

   18 assign_stat: ID '=' . initializer ';'

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    initializer      go to state 74
    term             go to state 25
    expression_stat  go to state 75
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30


State 47

   19 assign_stat: ID ADDASGN . initializer ';'

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    initializer      go to state 76
    term             go to state 25
    expression_stat  go to state 75
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30


State 48

   20 assign_stat: ID SUBASGN . initializer ';'

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    initializer      go to state 77
    term             go to state 25
    expression_stat  go to state 75
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30


State 49

   21 assign_stat: ID MULASGN . initializer ';'

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    initializer      go to state 78
    term             go to state 25
    expression_stat  go to state 75
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30


State 50

   22 assign_stat: ID DIVASGN . initializer ';'

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    initializer      go to state 79
    term             go to state 25
    expression_stat  go to state 75
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30


State 51

   23 assign_stat: ID MODASGN . initializer ';'

    '-'        shift, and go to state 1
    INC        shift, and go to state 2
    DEC        shift, and go to state 3
    '('        shift, and go to state 4
    I_CONST    shift, and go to state 14
    F_CONST    shift, and go to state 15
    STR_CONST  shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    ID         shift, and go to state 38

    initializer      go to state 80
    term             go to state 25
    expression_stat  go to state 75
    expression2      go to state 27
    expression3      go to state 28
    expression4      go to state 29
    expression5      go to state 30


State 52

   48 func_stat: ID '(' . func_param ')' ';'
   49          | ID '(' . error ')'
